# phasicj_cpp_prototype

./: .bazelrc  .gitignore  .gitmodules  .travis.yml  README.md  WORKSPACE
bazel/: adoptopenjdk.BUILD  gsl.BUILD  junit5.bzl  (+5 more)
java/org/phasicj/drd/: BUILD.bazel  DataRaceDetector.java
javaexamples/: BUILD.bazel  README.md
javaexamples/hello_world/: Main.java
javatests/org/phasicj/drd/: BUILD.bazel  TestNothing.java
phasicj/: .clang-format  BUILD.bazel  execution.proto  vectorclock.proto
phasicj/jmm/: BUILD.bazel  JmmTrace.h  JmmTraceManager.h  JvmInstanceManager.cc  JvmInstanceManager.h  JvmtiToJmmAdapter.cc  JvmtiToJmmAdapter.h  README.md
phasicj/jmm/vectorclocks/: BUILD.bazel  README.md  TraceEnhancer.cc  TraceEnhancer.h  TraceEnhancerManager.cc  TraceEnhancerManager.h  VcJmmTrace.h  VectorClock.h  vc_jmm_trace_manager.cc  vc_jmm_trace_manager.h
phasicj/jmm/vectorclocks/db/: BUILD.bazel  MapBackedVectorClock.cc  MapBackedVectorClock.h  VectorClockDb.cc  VectorClockDb.h
phasicj/jmm/vectorclocks/protos/: BUILD.bazel  MemoryEvent.proto  MemoryLocation.proto  Monitor.proto  TraceHeader.proto  VectorClock.proto
phasicj/jmmevents/: BUILD.bazel  README.md  jmm_action_adapter.cc  jmm_action_adapter.h  jmm_action_listener.h  jmm_action_listener_manager.h  jvm_instance_manager.h  jvmti_callbacks.cc  jvmti_capabilities.cc  jvmti_capabilities.h  jvmti_event_adapter.cc  jvmti_event_adapter.h
phasicj/jvmexec/: BUILD.bazel  memory_event.proto  memory_location.proto  monitor.proto  trace.proto  vector_clock.proto
phasicj/tracelogger/: BUILD.bazel  README.md  TraceLogManager.cc  TraceLogManager.h  TraceLogger.cc  TraceLogger.h  agent.cc  agent.h  agent_callbacks.cc  agent_callbacks.h  agent_dynamic.cc  agent_dynamic.h  agent_static.cc  agent_static.h  instance_manager.cc  instance_manager.h  tag_manager.cc  tag_manager.h  trace.cc  trace.h  trace_log.cc  trace_log.h  trace_logger.cc  trace_logger.h  trace_logger_manager.cc  trace_logger_manager.h  trace_manager.cc  trace_manager.h  vector_clock.cc  vector_clock.h  vector_clock_manager.cc  vector_clock_manager.h  vector_clock_store.cc  vector_clock_store.h
phasicj/tracelogger/agent/: Agent.cc  Agent.h  BUILD.bazel  DynamicAgent.cc  StaticAgent.cc  agent.cc  callbacks.cc  dynamic_agent.cc  dynamic_agent.h  static_agent.cc
phasicj/tracelogger/agent/testing/integration/: BUILD.bazel  JvmInvoker.cc  JvmInvoker.h  README.md  SmokeTest.cc  integration.bzl  integration_testing.bzl  jvm_invoker.cc  jvm_invoker.h  smoke_test.cc
phasicj/tracelogger/agent/testing/integration/hello/: BUILD.bazel  smoke_test.cc
phasicj/tracelogger/agent/testing/integration/sleep/: BUILD.bazel  multiple_jvms_smoke_test.cc
phasicj/tracelogger/agent/testing/integration/threads/: BUILD.bazel  smoke_test.cc
phasicj/tracelogger/agent/testing/integration/volatile_variable/: BUILD.bazel  smoke_test.cc
phasicj/tracelogger/core/: BUILD.bazel  agent.cc  agent.h  capabilities.cc  capabilities.h  instance_manager.cc  instance_manager.h  jvmti_event_manager.cc  tag_manager.cc  tag_manager.h  trace.cc  trace.h  trace_log.cc  trace_log.h  trace_logger.cc  trace_logger.h  trace_manager.cc  trace_manager.h  vector_clock.cc  vector_clock_manager.cc  vector_clock_manager.h
phasicj/tracelogger/jvmtiagent/: BUILD.bazel  dynamically_linked.cc  dynamically_linked.h  lifetime_event_callbacks.cc  lifetime_event_callbacks.h  statically_linked.cc  statically_linked.h
phasicj/tracelogger/jvmticonf/: BUILD.bazel  capabilities.cc  capabilities.h
phasicj/tracelogger/jvmticonfig/: BUILD.bazel  callback_manager.cc  callback_manager.h  capabilities.cc  capabilities.h  global_handler.cc  global_handler.h  initialize_environment.cc  initialize_environment.h  jvmti_callbacks.cc  jvmti_callbacks.h  local_handler.cc  local_handler.h
phasicj/tracelogger/jvmtievents/: BUILD.bazel  callbacks.cc  callbacks.h  global_handler.cc  global_handler.h  jvmti_callbacks.cc  jvmti_callbacks.h  local_handler.cc  local_handler.h  manager.cc  manager.h  receiver.cc  receiver.h
phasicj/tracelogger/linkage/: BUILD.bazel  dynamic.cc  static.cc  static.h
phasicj/tracelogger/logging/: BUILD.bazel  TraceLog.h  TraceLogManager.h
phasicj/tracelogger/logging/protos/: BUILD.bazel  ProtoFileTraceLog.cc  ProtoFileTraceLog.h  ProtoFileTraceLogManager.cc  ProtoFileTraceLogManager.h
phasicj/tracelogger/test/: BUILD.bazel  hello_test.cc  invoker.cc  invoker.h  jvm_invoker.cc  jvm_invoker.h  threads_test.cc  tracelogger_test.bzl  trivial_agent_test.cc
phasicj/tracelogger/test/java_test_progs/: BUILD.bazel
phasicj/tracelogger/test/javatestsrcs/: BUILD.bazel  hello_test.cc  threads_test.cc  tracelogger_test.bzl
phasicj/tracelogger/test/javatestsrcs/hello/: BUILD.bazel
phasicj/tracelogger/test/javatestsrcs/threads/: BUILD.bazel  Threads.java
phasicj/tracelogger/testing/integration/: BUILD.bazel  README.md  hello_test.cc  integration.bzl  integration_test.bzl  jvm_invoker.cc  jvm_invoker.h  testing.bzl  threads_test.cc
phasicj/tracelogger/testing/integration/drivers/: hello.cc  threads.cc  threads.cc.orig  volatile_variable.cc
phasicj/tracelogger/testing/integration/java_test_programs/: BUILD.bazel  java_test_program.bzl
phasicj/tracelogger/testing/integration/java_test_programs/hello/: Main.java.rej
phasicj/tracelogger/testing/integration/java_test_programs/threads/: Main.java
phasicj/tracelogger/testing/integration/java_test_programs/volatile_variable/: Main.java.orig  Main.java.rej
phasicj/tracelogger/testing/integration/java_test_progs/: BUILD.bazel
phasicj/util/jdk/: BUILD.bazel  invoker.cc  invoker.h
phasicj/util/jni/: BUILD.bazel  JniDescriptors.cc  JvmInvoker.cc  JvmInvoker.h  descriptors.cc  descriptors.h  jvm_invoker.cc  jvm_invoker.h
phasicj/util/jvm/: BUILD.bazel  threads.h
phasicj/util/jvmti/: BUILD.bazel  EnvironmentLocalStorage.cc  EnvironmentLocalStorage.h  Fields.cc  ThreadLocalStorage.cc  Threads.cc  Threads.h  environment_local_storage.cc  fields.cc  fields.h  misc.cc  misc.h  thread_local_storage.cc  thread_local_storage.h  threads.cc  threads.h
(+4 files in other folders)
