# Copyright 2019 David Johnston

package(
    default_visibility = ["//visibility:public"],
)

proto_library(
    name = "vectorclock",
    srcs = ["vectorclock.proto"],
)

java_proto_library(
    name = "vectorclock_java_proto",
    deps = [":vectorclock"],
)

cc_proto_library(
    name = "vectorclock_cc_proto",
    deps = [":vectorclock"],
)

proto_library(
    name = "execution_proto",
    srcs = ["execution.proto"],
    deps = [":vectorclock"],
)

java_proto_library(
    name = "execution_java_proto",
    deps = [":execution_proto"],
)

cc_proto_library(
    name = "execution_cc_proto",
    deps = [":execution_proto"],
)
