# Copyright 2019 David Johnston

package(
    default_visibility = ["//visibility:public"],
)

proto_library(
    name = "memory_event_proto",
    srcs = ["memory_event.proto"],
    deps = [
        ":memory_location_proto",
        ":monitor_proto",
        ":vector_clock_proto",
    ],
)

cc_proto_library(
    name = "memory_event_cc_proto",
    deps = [":memory_event_proto"],
)

proto_library(
    name = "memory_location_proto",
    srcs = ["memory_location.proto"],
)

cc_proto_library(
    name = "memory_location_cc_proto",
    deps = [":memory_location_proto"],
)

proto_library(
    name = "monitor_proto",
    srcs = ["monitor.proto"],
)

cc_proto_library(
    name = "monitor_cc_proto",
    deps = [":monitor_proto"],
)

proto_library(
    name = "vector_clock_proto",
    srcs = ["vector_clock.proto"],
)

cc_proto_library(
    name = "vector_clock_cc_proto",
    deps = [":vector_clock_proto"],
)
