# Copyright 2019 David Johnston

# TODO(dwtj) : I want to be able to build the agent as a standalone dynamic
# library deliverable, but its name needs to vary depending upon the target
# platform.It seems that I can't use a select expression in the name of a
# `cc_binary`, so I'm instead making multiple binaries. But this is misleading:
# for example, a `dylib` file is built during a linux build, but it is really
# a `so` file.
#
# So, what's the right way to do this.
alias(
    name = "pjtracelogger",
    actual = select({
        "@bazel_tools//src/conditions:darwin": "libpjtracelogger.dylib",
        "@bazel_tools//src/conditions:linux_x86_64": "libpjtracelogger.so",
    }),
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "libpjtracelogger.dylib",
    linkshared = True,
    linkstatic = True,
    deps = ["//phasicj/tracelogger/linkage:dynamic"],
)

cc_binary(
    name = "libpjtracelogger.so",
    linkshared = True,
    linkstatic = True,
    deps = ["//phasicj/tracelogger/linkage:dynamic"],
)
