package(
    default_visibility = ["//phasicj/tracelogger:__subpackages__"],
)

cc_library(
    name = "TraceLogger",
    srcs = ["TraceLogger.cc"],
    hdrs = ["TraceLogger.h"],
    copts = ["-std=c++17"],
    deps = [
        "//phasicj/jmm:JvmtiToJmmAdapter",
        "//phasicj/jmm/vectorclocks:VcJmmTraceManager",
        "//phasicj/util/jvm:threads",
        "//third_party/jdk:jni_headers",
        "//third_party/jdk:jvmti_headers",
    ],
)

cc_library(
    name = "TraceLoggerManager",
    srcs = ["TraceLogManager.cc"],
    hdrs = ["TraceLogManager.h"],
    copts = ["-std=c++17"],
    deps = [
        ":TraceLogger",
    ],
)
