# Copyright 2019 David Johnston

package(
    default_visibility = ["//phasicj/tracelogger:__subpackages__"],
)

cc_library(
    name = "receiver",
    srcs = ["receiver.cc"],
    hdrs = ["receiver.h"],
    deps = [
        ":manager",
        "//phasicj/tracelogger/core:trace_logger",
        "//phasicj/util/jvmti:fields",
        "//third_party/jdk:jni_headers",
        "//third_party/jdk:jvmti_headers",
    ],
)

cc_library(
    name = "callbacks",
    srcs = ["callbacks.cc"],
    hdrs = ["callbacks.h"],
    deps = [
        "//phasicj/tracelogger/core:agent",
        "//third_party/jdk:jni_headers",
        "//third_party/jdk:jvmti_headers",
    ],
)

cc_library(
    name = "manager",
    srcs = ["manager.cc"],
    hdrs = ["manager.h"],
    deps = [
        "//phasicj/tracelogger/jvmticonfig:capabilities",
        "//third_party/jdk:jni_headers",
        "//third_party/jdk:jvmti_headers",
    ],
)
