# Copyright 2019 David Johnston

package(
    default_testonly = True,
)

cc_test(
    name = "trivial_agent_test",
    size = "small",
    srcs = ["trivial_agent_test.cc"],
    deps = [
        "//phasicj/tracelogger:agent_dynamic",
        "//phasicj/tracelogger:agent_static",
        "@gtest//:gtest_main",
    ],
)

cc_library(
    name = "invoker",
    srcs = ["invoker.cc"],
    hdrs = ["invoker.h"],
    visibility = ["__subpackages__"],
    deps = [
        "//phasicj/util/jdk:invoker",
    ],
)
