# Copyright 2019 David Johnston

package(
    default_testonly = True,
)

cc_test(
    name = "trivial_agent_test",
    size = "small",
    srcs = ["trivial_agent_test.cc"],
    deps = [
        "//phasicj/tracelogger:agent_dynamic",
        "//phasicj/tracelogger:agent_static",
        "@gtest//:gtest_main",
    ],
)

cc_library(
    name = "jvm_invoker",
    srcs = ["jvm_invoker.cc"],
    hdrs = ["jvm_invoker.h"],
    visibility = ["__subpackages__"],
    deps = [
        "//phasicj/util/jni:jvm_invoker",
        "@boost//:filesystem",
    ],
)

load(
    ":tracelogger_test.bzl",
    "tracelogger_static_test",
    "tracelogger_test",
)

tracelogger_test(
    name = "hello_test",
    srcs = ["hello_test.cc"],
    javadeps = ["//phasicj/tracelogger/test/java_test_progs:hello"],
)

# TODO(dwtj): Statically linked agent tests work on macOS, but not yet on Ubuntu
#tracelogger_static_test(
#    name = "hello_test_with_statically_linked_agent",
#    srcs = ["hello_test.cc"],
#    javadeps = ["//phasicj/tracelogger/test/java_test_progs:hello"],
#)

tracelogger_test(
    name = "threads_test",
    srcs = ["threads_test.cc"],
    javadeps = ["//phasicj/tracelogger/test/java_test_progs:threads"],
)
