cc_library(
    name = "jvm_invoker",
    srcs = ["jvm_invoker.cc"],
    hdrs = [
        "jvm_invoker.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":jni_descriptors",
        "//third_party/jdk:jni_headers",
        "@boost//:config",
        "@boost//:cstdint",
        "@boost//:detail",
        "@boost//:numeric",
        "@boost//:throw_exception",
        "@boost//:type",
        "@boost//:type_traits",
    ],
)

cc_library(
    name = "jni_descriptors",
    srcs = ["descriptors.cc"],
    hdrs = ["descriptors.h"],
)
