cc_library(
    name = "JvmInvoker",
    srcs = ["JvmInvoker.cc"],
    hdrs = [
        "JvmInvoker.h",
    ],
    copts = ["-std=c++17"],
    visibility = ["//visibility:public"],
    deps = [
        ":JniDescriptors",
        "//third_party/jdk:jni_headers",
        "@boost//:config",
        "@boost//:cstdint",
        "@boost//:detail",
        "@boost//:numeric",
        "@boost//:throw_exception",
        "@boost//:type",
        "@boost//:type_traits",
    ],
)

cc_library(
    name = "JniDescriptors",
    srcs = ["JniDescriptors.cc"],
    hdrs = ["JniDescriptors.h"],
    copts = ["-std=c++17"],
)
