package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "ThreadLocalStorage",
    srcs = ["ThreadLocalStorage.cc"],
    hdrs = ["ThreadLocalStorage.h"],
    copts = ["-std=c++17"],
    deps = [
        "//third_party/jdk:jni_headers",
        "//third_party/jdk:jvmti_headers",
    ],
)

cc_library(
    name = "EnvironmentLocalStorage",
    srcs = ["EnvironmentLocalStorage.cc"],
    hdrs = ["EnvironmentLocalStorage.h"],
    copts = ["-std=c++17"],
    deps = [
        "//third_party/jdk:jni_headers",
        "//third_party/jdk:jvmti_headers",
    ],
)

cc_library(
    name = "Fields",
    srcs = ["Fields.cc"],
    hdrs = ["Fields.h"],
    copts = ["-std=c++17"],
    deps = [
        "//third_party/jdk:jni_headers",
        "//third_party/jdk:jvmti_headers",
    ],
)

cc_library(
    name = "Threads",
    srcs = ["Threads.cc"],
    hdrs = ["Threads.h"],
    copts = ["-std=c++17"],
    deps = [
        "//phasicj/util/jvm:threads",
        "//third_party/jdk:jni_headers",
        "//third_party/jdk:jvmti_headers",
        "@boost//:config",
        "@boost//:detail",
        "@boost//:log",
        "@boost//:numeric",
        "@boost//:type",
    ],
)
