# Copyright 2019 David Johnston

package(
    default_testonly = True,
)

load(
    ":tracelogger_test.bzl",
    "tracelogger_static_test",
    "tracelogger_test",
)

tracelogger_test(
    name = "hello_test",
    srcs = ["hello_test.cc"],
    javadeps = ["//phasicj/tracelogger/test/javatestsrcs/hello"],
)

# TODO(dwtj): Statically linked agent tests work on macOS, but not yet on Ubuntu
#tracelogger_static_test(
#    name = "hello_test_with_statically_linked_agent",
#    srcs = ["hello_test.cc"],
#    javadeps = ["//phasicj/tracelogger/test/javatestsrcs/hello"],
#)

tracelogger_test(
    name = "threads_test",
    srcs = ["threads_test.cc"],
    javadeps = ["//phasicj/tracelogger/test/javatestsrcs/threads"],
)
