# Copyright 2019 David Johnston

package(
    default_testonly = True,
)

cc_library(
    name = "jvm_invoker",
    srcs = ["jvm_invoker.cc"],
    hdrs = ["jvm_invoker.h"],
    visibility = ["__subpackages__"],
    deps = [
        "//phasicj/util/jni:jvm_invoker",
        "@boost//:filesystem",
    ],
)

load(":testing.bzl", "jvm_tracelogger_integration_test")

jvm_tracelogger_integration_test(
    name = "hello_test",
    srcs = ["hello_test.cc"],
    javadeps = ["//phasicj/tracelogger/testing/integration/java_test_progs:hello"],
)

# TODO(dwtj): Statically linked agent tests work on macOS, but not yet on Ubuntu
#jvm_tracelogger_static_integration_test(
#    name = "hello_test_with_statically_linked_agent",
#    srcs = ["hello_test.cc"],
#    javadeps = ["//phasicj/tracelogger/testing/integration/java_test_progs:hello"],
#)

jvm_tracelogger_integration_test(
    name = "threads_test",
    srcs = ["threads_test.cc"],
    javadeps = ["//phasicj/tracelogger/testing/integration/java_test_progs:threads"],
)
