# Copyright 2019 David Johnston

package(
    default_testonly = True,
)

cc_library(
    name = "jvm_invoker",
    srcs = ["jvm_invoker.cc"],
    hdrs = ["jvm_invoker.h"],
    visibility = ["__subpackages__"],
    deps = [
        "//phasicj/util/jni:jvm_invoker",
        "@boost//:filesystem",
    ],
)

load(":integration.bzl", "integration_test")

integration_test(name = "hello")

integration_test(name = "threads")

integration_test(name = "volatile_variable")
