load("//phasicj/tracelogger/agent/testing/integration:integration.bzl", "simple_integration_test_matrix")

simple_integration_test_matrix(
    cc_test_deps = [
        "//phasicj/tracelogger/agent/testing/integration:jvm_invoker",
        "@gtest",
    ],
    cc_test_srcs = ["smoke_test.cc"],
    java_package = "volatile_variable",
    name_prefix = "volatile_variable_smoke_test",
)
